--- a/RoundScheduler/RoundScheduler.csproj
+++ b/RoundScheduler/RoundScheduler.csproj
@@ -64,14 +64,19 @@
     <Compile Include="Events\RoundEndedEventHandler.cs" />
     <Compile Include="Model\RoundsInitializer.cs" />
     <Compile Include="Model\RoundTimer.cs" />
+    <Compile Include="Model\Settings.cs" />
     <Compile Include="ProgramTexts.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>ProgramTexts.resx</DependentUpon>
     </Compile>
     <Compile Include="Services\FileDialogService.cs" />
+    <Compile Include="SettingsDialog.xaml.cs">
+      <DependentUpon>SettingsDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Utils\DelegateCommand.cs" />
     <Compile Include="Utils\IndexConverter.cs" />
+    <Compile Include="Utils\SettingsManager.cs" />
     <Page Include="AddDefaultRounds.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -89,6 +94,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="SettingsDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\RoundSchedule.cs" />
@@ -109,6 +118,7 @@
     <EmbeddedResource Include="ProgramTexts.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>ProgramTexts.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
